tests/snapshots/snapshot__describe_snapshot.snap
---
source: tests/snapshot.rs
expression: desc
---
{
  "profile_id": "[id]",
  "name": "tiny",
  "path": "[path]",
  "duration_ms": "[duration]",
  "interval_ms": 1.0,
  "sample_rate_hz": 1000.0,
  "total_samples": "[total]",
  "total_processes": 3,
  "total_threads": 11,
  "unsymbolicated_pct": "[pct]",
  "events": [
    {
      "name": "samples",
      "source": "samples",
      "count": 112
    }
  ],
  "processes": [
    {
      "pid": "1969186.1",
      "name": "rustfmt",
      "thread_count": 9,
      "total_samples": "[total]",
      "threads": [
        {
          "tid": 1969261,
          "name": "tokio-runtime-w",
          "samples": "[n]",
          "duration_ms": "[dur]"
        },
        {
          "tid": 1969260,
          "name": "tokio-runtime-w",
          "samples": "[n]",
          "duration_ms": "[dur]"
        },
        {
          "tid": 1969263,
          "name": "tokio-runtime-w",
          "samples": "[n]",
          "duration_ms": "[dur]"
        },
        {
          "tid": 1969264,
          "name": "tokio-runtime-w",
          "samples": "[n]",
          "duration_ms": "[dur]"
        },
        {
          "tid": 1969267,
          "name": "tokio-runtime-w",
          "samples": "[n]",
          "duration_ms": "[dur]"
        },
        {
          "tid": 1969186,
          "name": "rustfmt",
          "samples": "[n]",
          "duration_ms": "[dur]"
        },
        {
          "tid": 1969262,
          "name": "tokio-runtime-w",
          "samples": "[n]",
          "duration_ms": "[dur]"
        },
        {
          "tid": 1969265,
          "name": "tokio-runtime-w",
          "samples": "[n]",
          "duration_ms": "[dur]"
        },
        {
          "tid": 1969266,
          "name": "tokio-runtime-w",
          "samples": "[n]",
          "duration_ms": "[dur]"
        }
      ]
    },
    {
      "pid": "1969186",
      "name": "samply",
      "thread_count": 1,
      "total_samples": "[total]",
      "threads": [
        {
          "tid": 1969186,
          "name": "samply",
          "samples": "[n]",
          "duration_ms": "[dur]"
        }
      ]
    },
    {
      "pid": "1969186.2",
      "name": "rustfmt",
      "thread_count": 1,
      "total_samples": "[total]",
      "threads": [
        {
          "tid": 1969186,
          "name": "rustfmt",
          "samples": "[n]",
          "duration_ms": "[dur]"
        }
      ]
    }
  ]
}
