tests/snapshots/snapshot__top_functions_snapshot.snap
---
source: tests/snapshot.rs
expression: result
---
{
  "thread": null,
  "process": null,
  "total_samples": "[total]",
  "filter": null,
  "sort_by": "self",
  "event": "samples",
  "weighted": false,
  "functions": [
    {
      "rank": 1,
      "function": "0x114df9",
      "module": "libc.so.6",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 2,
      "function": "0x112c69",
      "module": "libc.so.6",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 3,
      "function": "0x422000",
      "module": "rustup",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 4,
      "function": "0xe1cf7",
      "module": "libc.so.6",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 5,
      "function": "0x111aa7",
      "module": "libc.so.6",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 6,
      "function": "0x1478",
      "module": "[vdso]",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 7,
      "function": "0x23c72",
      "module": "ld-linux-x86-64.so.2",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 8,
      "function": "0x3a1c78",
      "module": "rustup",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 9,
      "function": "0x725232",
      "module": "rustup",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 10,
      "function": "0x7f2eda66bcf7",
      "module": null,
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 11,
      "function": "0xa2ae7",
      "module": "libc.so.6",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 12,
      "function": "0xa48b6",
      "module": "libc.so.6",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 13,
      "function": "0xac33",
      "module": "ld-linux-x86-64.so.2",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 14,
      "function": "0xf801",
      "module": "ld-linux-x86-64.so.2",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 15,
      "function": "0x10e3",
      "module": "[vdso]",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 16,
      "function": "0x114e07",
      "module": "libc.so.6",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 17,
      "function": "0x119bd",
      "module": "ld-linux-x86-64.so.2",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 18,
      "function": "0x169fb9",
      "module": "rustup",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 19,
      "function": "0x197295",
      "module": "rustup",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 20,
      "function": "0x19b926",
      "module": "rustup",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 21,
      "function": "0x19f690",
      "module": "rustup",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 22,
      "function": "0x19fcdd",
      "module": "rustup",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 23,
      "function": "0x1a9618",
      "module": "rustup",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 24,
      "function": "0x1d7fe",
      "module": "ld-linux-x86-64.so.2",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 25,
      "function": "0x1dd47",
      "module": "ld-linux-x86-64.so.2",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 26,
      "function": "0x1e7f4f",
      "module": "rustup",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 27,
      "function": "0x1ede0",
      "module": "ld-linux-x86-64.so.2",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 28,
      "function": "0x20aaf",
      "module": "ld-linux-x86-64.so.2",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 29,
      "function": "0x20e0a",
      "module": "ld-linux-x86-64.so.2",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    },
    {
      "rank": 30,
      "function": "0x23fd",
      "module": "ld-linux-x86-64.so.2",
      "self_samples": "[n]",
      "self_pct": "[pct]",
      "total_samples": "[n]",
      "total_pct": "[pct]"
    }
  ]
}
